<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".AddItemActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_condensed_medium"
        android:text="@string/message_addItem_category"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="411dp"
        android:layout_height="25dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <EditText
        android:id="@+id/editItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/text_itemName_addItem"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="21dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_condensed_medium"
        android:text="@string/message_addItem_minPrice"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/seekBarPrice"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="307dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato"
            android:text="@string/dollar_sign"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textviewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/zero_value" />

        <Space
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_condensed_medium"
        android:text="@string/message_addItem_biddingDate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="291dp"
        android:orientation="horizontal">

        <CalendarView
            android:id="@+id/calendarViewItem"
            android:layout_width="206dp"
            android:layout_height="293dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:fontFamily="@font/fira_sans_condensed_medium"
                android:text="@string/message_addItem_location" />

            <Spinner
                android:id="@+id/spinnerContinent"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="36dp" />

            <EditText
                android:id="@+id/editContry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/text_country"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="36dp" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/lato"
                android:hint="@string/text_city"
                android:inputType="textPersonName" />

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bitter_bold"
            android:onClick="returnFirstCreatedItem"
            android:text="@string/btn_addItem"
            app:backgroundTint="@color/powerful_red"
            app:cornerRadius="100px" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="13dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bitter_bold"
            android:onClick="backToFirst"
            android:text="@string/btn_backToMenu"
            app:backgroundTint="@color/powerful_red"
            app:cornerRadius="100px" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>